--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -8,6 +8,8 @@
     <title>Todo</title>
   </head>
   <body>
+    <!-- Include html -->
+    {% include 'nav_bar.html' %}
     <table class="table">
       <thead class="bg-success">
         <tr>
